# clearpath-ros-pkg

./: ProjectHome.md
clearpath_chameleon/chameleon_avr_bridge/arduino_cmake/: avrbuild.cmake
clearpath_chameleon/chameleon_avr_bridge/scripts/: gen_avr.py
clearpath_chameleon/chameleon_avr_bridge/src/: gen_avr_utils.py
clearpath_chameleon/chameleon_firmware/: CMakeLists.txt  config.yaml  firmware  gen_headers.sh  manifest.xml  minimal.launch
clearpath_chameleon/chameleon_firmware/src/: fixed.h  main.cpp  pid.h
clearpath_chameleon/chameleon_firmware/src/avr_ros/: ChameleonCmdPWM.cpp  ChameleonCmdSpeed.h  ChameleonSense.cpp  ChameleonSense.h  Twist.cpp  Vector3.cpp  node_handle.h  ros_float64.cpp  ros_float64.h  ros_get_topic_tag.h  ros_node_instance.h
clearpath_chameleon/chameleon_firmware/udev/: chameleon.rules  setup.sh
clearpath_chameleon/chameleon_msgs/msg/: ChameleonCmdPWM.msg  (+1 more)
clearpath_chameleon/chameleon_teleop/: manifest.xml  teleop.launch
clearpath_kingfisher/: stack.xml
clearpath_platform/: README  stack.xml
clearpath_platform/clearpath_sensors/: example.launch
clearpath_platform/clearpath_teleop/: example.launch  teleop_a100.launch  teleop_m100.launch
clearpath_turtlebot/: stack.xml
clearpath_turtlebot/turtlebot_kinect/: manifest.xml
clearpath_turtlebot/turtlebot_rndmwalk/: manifest.xml
clearpath_turtlebot/turtlebot_train/: CMakeLists.txt  manifest.xml
trunk/clearpath_base/: example.launch  manifest.xml
trunk/clearpath_chameleon/: stack.xml
trunk/clearpath_common/: stack.xml
trunk/clearpath_platform/: stack.xml
(+88 files in other folders)
